<resources>
    <string name="app_name">MVPDemo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="msg_no_such_college">Sorry! No Colleges Found</string>
    <string name="college_name">College Name</string>
    <string name="college_address">Address</string>
    <string name="courses">Courses</string>
    <string name="college_description">College Description</string>
    <string name="submit">Submit</string>
    <string name="enter_college_details">Enter College Details</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="msg_name_empty">Name cant be empty</string>
    <string name="msg_address_empty">Address can\'t be empty</string>
    <string name="msg_description_empty">Description can\'t be empty</string>
    <string name="msg_course_empty">Courses empty</string>
    <string name="msg_phone_empty">Phone empty</string>
    <string name="msg_mail_empty_invalid">Email empty or invalid</string>
    <string name="search">Search...</string>
    <string name="hint_search">Search</string>
    <string name="enter_image_by_tapping_the_icon">Enter Image by tapping the icon:</string>
    <string name="msg_delete_college">Delete College</string>
    <string name="msg_update_college">Update College</string>
    <string name="msg_cancel">Cancel</string>
    <string name="default_id">123</string>
    <string name="btech">B.Tech</string>
</resources>
