<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:orientation="vertical"
        tools:context=".addcollegesample.AddCollegeActivity">


        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/enter_college_details"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30"
            android:textStyle="italic" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_college_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/college_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_college_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/college_address" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_college_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/college_description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_college_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/courses" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_college_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_college_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_image_by_tapping_the_icon"/>

        <ImageView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center_horizontal"
            android:id="@+id/iv_college"
            android:layout_width="@dimen/dp_200"
            android:src="@android:drawable/ic_input_add"
            android:layout_height="@dimen/dp_200" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>