<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_college">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        app:contentPadding="@dimen/dp_10"
        app:cardBackgroundColor="@android:color/holo_blue_bright">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_college_id"
        android:textStyle="italic"
        tools:text="@string/default_id"
        android:textSize="@dimen/sp_18"/>

    <TextView
        android:textStyle="italic"
        android:textSize="@dimen/sp_18"
        android:layout_gravity="center"
        android:id="@+id/tv_college_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/college_name"/>

    <TextView
        android:id="@+id/tv_college_course"
        android:textSize="@dimen/sp_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        tools:text="@string/btech"/>
    </android.support.v7.widget.CardView>
</RelativeLayout>